// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/settings/repositoryLocationListItem matches snapshot for device 1`] = `
<div
  className="item"
  role="list"
>
  <div
    className="numbering"
  >
    1
  </div>
  <div
    className="location-item"
    role="listitem"
  >
    <div
      className="item-details"
    >
      <StyledLabelBase>
        settings.modelDefinitions.repositoryTypes.device.label
      </StyledLabelBase>
    </div>
    <CustomizedIconButton
      ariaLabel="settings.cancel"
      className="remove-button"
      iconProps={
        Object {
          "iconName": "Cancel",
        }
      }
      onClick={[Function]}
      title="settings.cancel"
    />
  </div>
</div>
`;

exports[`components/settings/repositoryLocationListItem matches snapshot for local 1`] = `
<div
  className="item"
  role="list"
>
  <div
    className="numbering"
  >
    1
  </div>
  <div
    className="location-item"
    role="listitem"
  >
    <div
      className="item-details"
    >
      <div
        className="labelSection"
      >
        <LabelWithRichCallout
          calloutContent="settings.modelDefinitions.repositoryTypes.local.infoText"
          required={true}
        >
          settings.modelDefinitions.repositoryTypes.local.label
        </LabelWithRichCallout>
      </div>
      <StyledTextFieldBase
        ariaLabel="settings.modelDefinitions.repositoryTypes.local.textBoxLabel"
        className="local-folder-textbox"
        label="settings.modelDefinitions.repositoryTypes.local.textBoxLabel"
        readOnly={true}
        value="f:/"
      />
      <CustomizedDefaultButton
        ariaLabel="Pick a folder"
        onClick={[Function]}
        text="Pick a folder"
      />
      <div
        role="dialog"
      >
        <StyledWithResponsiveMode
          className="folder-picker-dialog"
          hidden={true}
          modalProps={
            Object {
              "isBlocking": false,
            }
          }
          onDismiss={[Function]}
          subText="Current folder: f:/"
          title="Select a folder as a local model repository"
        >
          <div
            className="folder-links"
          >
            <CustomizedDefaultButton
              ariaLabel="Navigate back to parent folder"
              className="folder-button"
              disabled={false}
              iconProps={
                Object {
                  "iconName": "NavigateBack",
                }
              }
              onClick={[Function]}
              text="Navigate back to parent folder"
            />
            <div
              className="no-folders-text"
            >
              No folders found
            </div>
          </div>
          <StyledDialogFooterBase>
            <CustomizedPrimaryButton
              disabled={false}
              onClick={[Function]}
              text="Select"
            />
            <CustomizedDefaultButton
              onClick={[Function]}
              text="Cancel"
            />
          </StyledDialogFooterBase>
        </StyledWithResponsiveMode>
      </div>
    </div>
    <CustomizedIconButton
      ariaLabel="settings.cancel"
      className="remove-button"
      iconProps={
        Object {
          "iconName": "Cancel",
        }
      }
      onClick={[Function]}
      title="settings.cancel"
    />
  </div>
</div>
`;

exports[`components/settings/repositoryLocationListItem matches snapshot for private 1`] = `
<div
  className="item"
  role="list"
>
  <div
    className="numbering"
  >
    1
  </div>
  <div
    className="location-item"
    role="listitem"
  >
    <div
      className="item-details"
    >
      <Connect(MaskedCopyableTextField)
        allowMask={true}
        ariaLabel="settings.modelDefinitions.repositoryTypes.private.textBoxLabel"
        label="settings.modelDefinitions.repositoryTypes.private.textBoxLabel"
        onTextChange={[MockFunction]}
        placeholder="settings.modelDefinitions.repositoryTypes.private.placeholder"
        readOnly={false}
        required={true}
        setFocus={false}
        value="HostName=repo.azureiotrepository.com;RepositoryId=123;SharedAccessKeyName=456;SharedAccessKey=789"
      />
    </div>
    <CustomizedIconButton
      ariaLabel="settings.cancel"
      className="remove-button"
      iconProps={
        Object {
          "iconName": "Cancel",
        }
      }
      onClick={[Function]}
      title="settings.cancel"
    />
  </div>
</div>
`;

exports[`components/settings/repositoryLocationListItem matches snapshot for public 1`] = `
<div
  className="item"
  role="list"
>
  <div
    className="numbering"
  >
    1
  </div>
  <div
    className="location-item"
    role="listitem"
  >
    <div
      className="item-details"
    >
      <StyledLabelBase>
        settings.modelDefinitions.repositoryTypes.public.label
      </StyledLabelBase>
    </div>
  </div>
</div>
`;
